--- a/infrastructure/identity/account/templates/register.html
+++ b/infrastructure/identity/account/templates/register.html
@@ -17,7 +17,7 @@
                 <p>{{ form.error }}</p>
                 <div>
                     <div>
-                        <label for="username">{{ form.username.label }}</label>
+                        <label for="username">Email</label>
                     </div>
                     <div>
                         {{ form.username }}
