--- a/infrastructure/identity/account/templates/register.html
+++ b/infrastructure/identity/account/templates/register.html
@@ -6,48 +6,72 @@
     <title>Register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <style type="text/css">
+        .register-form input {
+            width: 100%;
+        }
+        .errorlist {
+            list-style: none;
+            padding: 0;
+            font-size: 13px;
+            color: red;
+        }
+    </style>
+
     <script src="main.js"></script>
 </head>
 <body>
-    <div>
-        <h2>Register</h2>
-        <div>
-            <form method="post" action="{{ request.get_full_path }}" >
-                {% csrf_token %}
-                <p>{{ form.error }}</p>
-                <div>
-                    <div>
-                        <label for="username">Email</label>
+    <div class="container">
+        <div class="row">
+            <div class="offset-4 col-sm-3" style="margin-top:10%">
+                <h2>Register</h2>
+                <p>Clever solution for user registration</p>
+                <div class="row">
+                    <div class="col-sm-12 well">
+                        <form method="post" action="{{ request.get_full_path }}" class="register-form">
+                            {% csrf_token %}
+                            <p class="errorlist">{{ form.non_field_errors }}</p>
+                            <div>
+                                <label for="username">Email</label>
+                                <div>
+                                    {{ form.username }}
+                                </div>
+                                <p>{{ form.username.errors }}</p>
+                            </div>
+                            <div>
+                                <div>
+                                    <label for="password">{{ form.password.label }}</label>
+                                </div>
+                                <div>
+                                    {{ form.password }}
+                                </div>
+                                <p>{{ form.password.errors }}</p>
+                            </div>
+                            <div>
+                                <div>
+                                    <label for="confirm_password">{{ form.confirm_password.label }}</label>
+                                </div>
+                                <div>
+                                    {{ form.confirm_password }}
+                                </div>
+                                <p>{{ form.confirm_password.errors }}</p>
+                            </div>
+                            <div>
+                                <button class="btn-info" type="submit">Register</button>
+                                <a href="#">Login</a>
+                            </div>
+                        </form>
                     </div>
-                    <div>
-                        {{ form.username }}
-                    </div>
-                    <p>{{ form.username.errors }}</p>
                 </div>
-                <div>
-                    <div>
-                        <label for="password">{{ form.password.label }}</label>
-                    </div>
-                    <div>
-                        {{ form.password }}
-                    </div>
-                    <p>{{ form.password.errors }}</p>
-                </div>
-                <div>
-                    <div>
-                        <label for="confirm_password">{{ form.confirm_password.label }}</label>
-                    </div>
-                    <div>
-                        {{ form.confirm_password }}
-                    </div>
-                    <p>{{ form.confirm_password.errors }}</p>
-                </div>
-                <div>
-                    <button type="submit">Register</button>
-                    <a href="#">Login</a>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
